# cmake-example

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/blah/: CMakeLists.txt  blah.cpp
src/hello/: CMakeLists.txt  hello.cpp  hello.h
tests/: CMakeLists.txt  test_blah.cpp
